fix next arrow alignment

--- a/_sass/primary.scss
+++ b/_sass/primary.scss
@@ -172,7 +172,7 @@ strong {font-weight: 500;}
 	background-size: 2.25em;
 	border-radius: 100%;
 	border: 0;
-	bottom: 50px;
+	bottom: 10px;
 	display: block;
 	width: 4em;
 	height: 4em;
@@ -566,7 +566,7 @@ textarea {
 	// Next button
 	.goto-next {
 		background-size: 2.5em;
-		bottom: 50px;
+		bottom: 10px;
 	}
 	//BANNER
 	#banner {
